--- a/config-example.json
+++ b/config-example.json
@@ -1,5 +1,5 @@
 {
-  "environment": "prod",
+  "environment": "prd",
   "resource_prefix": "medialake",
   "account_id": "123456789012",
   "global_prefix": "medialake",
