--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Deploy CFN on PR
 
+permissions:
+  id-token: write
+  contents: read
+  
 on:
   pull_request:
     types: [opened, synchronize, reopened]
