--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,42 +40,44 @@ jobs:
       - name: Set up Python virtual environment
         run: python -m venv .venv
 
-      - name: Upgrade pip and install boto3
+      - name: Upgrade pip and install dependencies
         run: |
           source .venv/bin/activate
           pip install --upgrade pip
-          pip install boto3
 
-      - name: Generate config from template
+      - name: Install jq and moreutils
         run: |
-          source .venv/bin/activate
-          cat <<'EOF' > generate_config.py
-import json, boto3
-from pathlib import Path
+          sudo apt-get update
+          sudo apt-get install -y jq moreutils
 
-template_path = Path('.cicd/config.template')
-with open(template_path) as f:
-    config_template = f.read()
+      - name: Patch config.json with jq (GitLab-style!)
+        env:
+          MediaLakeEnvironmentName: dev
+          InitialUserEmail: 'medialake+test@amazon.com'
+          InitialUserFirstName: 'Medialake'
+          InitialUserLastName: 'User'
+          OpenSearchDeploymentSize: 'large'
+        run: |
+          # Use existing config, or copy template if needed
+          if [ -f guidance-for-medialake-on-aws/config.json ]; then
+            echo "Using existing config file";
+          else
+            echo "Creating config file";
+            cp .cicd/config.template guidance-for-medialake-on-aws/config.json;
+          fi
 
-config_template = config_template.replace('<env>', 'dev')
-config_template = config_template.replace('<initial_user_email>', 'medialake+test@amazon.com')
+          AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          AWS_REGION="$(aws configure get region || echo 'us-west-2')"
 
-sts = boto3.client('sts')
-account_id = sts.get_caller_identity()['Account']
-region = boto3.Session().region_name or 'us-west-2'
-config_template = config_template.replace('<aws_account_id>', account_id)
-config_template = config_template.replace('<aws_region>', region)
+          jq --arg e "$MediaLakeEnvironmentName"  '.environment = $e'              guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg a "$AWS_ACCOUNT_ID"           '.account_id = $a'                guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg r "$AWS_REGION"               '.primary_region = $r'             guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg u "$InitialUserEmail"         '.initial_user.email = $u'         guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg f "$InitialUserFirstName"     '.initial_user.first_name = $f'    guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg l "$InitialUserLastName"      '.initial_user.last_name = $l'     guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
+          jq --arg s "$OpenSearchDeploymentSize" '.opensearch_deployment_size = $s' guidance-for-medialake-on-aws/config.json | sponge guidance-for-medialake-on-aws/config.json
 
-config = json.loads(config_template)
-output_path = Path('guidance-for-medialake-on-aws/config.json')
-output_path.parent.mkdir(exist_ok=True, parents=True)
-with open(output_path, 'w') as f:
-    json.dump(config, f, indent=2)
-print(f'Wrote {output_path}')
-EOF
-          python generate_config.py
-
-      - name: Install CDK project dependencies
+      - name: Install project dependencies
         run: |
           source .venv/bin/activate
           pip install -r requirements.txt
